# world-creator

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE.md  README.md  fetch_models.py  fetch_worlds.py  load_models.py  output.txt  output_models.json  output_models_name.json  pyproject.toml  setup.py  split_long.py  test.py  world_response
.github/workflows/: lint_and_test.yml
ciare_world_creator/: cli.py
ciare_world_creator/collections/: utils.py
ciare_world_creator/commands/: create.py  fix.py  list.py  purge.py
ciare_world_creator/contexts_prompts/: edit.py  model.py  place.py  scale.py  world.py
ciare_world_creator/llm/: model.py
ciare_world_creator/model_databases/: base.py  fetch_models.py  fetch_worlds.py  gazebo.py  objaverse.py
ciare_world_creator/sim_interfaces/: base.py  gazebo.py  mujoco.py
ciare_world_creator/utils/: cache.py  json.py  style.py
ciare_world_creator/xml/: empty_world.py  worlds.py
prompts/: model_selector  world_builder
tests/: download_model.py  test_cli.py  test_loaders.py  test_parsing.py
