[tool.poetry]
name = "ciare-world-creator"
version = "0.1.1"
description = ""
authors = ["Alex Karavaev <alexkaravaev@alexkaravaev.xyz>"]
readme = "README.md"
packages = [{include = "ciare_world_creator"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
openai = "^0.27.8"
lxml = "^4.9.2"
chromadb = "^0.3.26"
pandas = "^2.0.3"
questionary = "^1.10.0"
tqdm = "^4.65.0"
click = "^8.1.3"
tinydb = "^4.8.0"
langchain = "^0.0.222"
asyncio = "^3.4.3"
aiohttp = "^3.8.4"
tabulate = "^0.9.0"
lark = "^1.1.5"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Python-style entrypoints and scripts are easily expressed
[tool.poetry.scripts]
ciare_world_creator = "ciare_world_creator.cli:cli"
